# recall

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  index.html  lefthook.yml  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml
Casks/: banzai.rb
scripts/: release.sh  update-cask.sh
src/: App.tsx  main.rs  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
