[package]
name = "banzai"
version = "0.2.0"
edition = "2021"

[package.metadata.bundle]
name = "Banzai"
identifier = "com.banzai.clipboard"
icon = ["icon.png"]
category = "Utility"
osx_minimum_system_version = "10.14"

[package.metadata.bundle.macos]
LSUIElement = true

[dependencies]
arboard = "3"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
tao = "0.30"
tray-icon = "0.17"
auto-launch = "0.5.0"
