[package]
name = "banzai"
version = "0.10.1"
description = "A macOS menu bar clipboard history manager"
authors = ["naofumi-fujii"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "banzai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
auto-launch = "0.5"
log = "0.4"
rdev = "0.5"

[target.'cfg(target_os = "macos")'.dependencies]
macos-accessibility-client = "0.0.1"
