[package]
name = "banzai"
version = "1.2.4"
description = "A macOS menu bar clipboard history manager"
authors = ["naofumi-fujii"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "banzai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
log = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSEvent"] }
objc2-foundation = { version = "0.3", features = ["NSRunLoop"] }
block2 = "0.6"
